Version 2.6
~~~~~~~~~~~
* Some improvements to VDIF file reading for very gappy data
* Some improvements to VDIF for frame sizes greatly differing from 5000 bytes
* Remove array that was mooted when per-band weights were introduced

Version 2.5
~~~~~~~~~~~
* Another 0.5ns jitter was found in Mark5B processing for data rates >= 2 Gbps.  This is now fixed (2015 Feb 22 -- WFB)
* Slightly more instructive messages when model files have disagreements with .calc files.
* Check for time disagreements in polyco headers: the fractional MJD is supposed to be definitive, while the HHMMSS value can be rounded
* Support .im files that contain some additional information (mpifxcorr now just ignores the info)
* First bits of code for native Mark6 in place.  This relies on some mark6 "gather" code in the vdifio library.
* Add support for VDIF with multiple channels per thread and multiple threads.
* Add support for complex VDIF with multiple threads
* Add support for per-band data weights.  Currently only implemented for Interlaced VDIF
* Add support for fanned-out VDIF (one channel interleaved across more than one thread).  This is relevant for some DDC3 modes.  Untested as of 2015 Nov 17
* If arrarystride is zero, calculate a reasonable value for it
  - Allows arraystride to be set separately per datastream
  - This is of particular use when datastreams have discrepant bandwidths (e.g., ALMA's 62.5 MHz vs normal 2^n MHz )
* If xmacstride is zero, calculate a reasonable value for it based on output frequencies' channel counts
* Introduce concept of rotatestridelen which is used for uvshifting.  It is based purely on xmacstridelen, unlike previous implementation which also considered arraystridelen
* If guardns is zero, set automatically.  It likely will fail for any satellite observation.
* checkmpifxcorr: option to set max message level
* checkmpifxcorr: can operate on multiple input files
* now require dirlist library for native Mark5 playback